Fix chat alignment in Chrome 52.
For some reason a flexbox with justify-content:center will now also
center absolutely positioned elements?

--- a/static/css/room.css
+++ b/static/css/room.css
@@ -79,7 +79,6 @@
     position: fixed;
     top: 0;
     left: 0;
-    padding: 0;
     width: 100%;
     max-width: none;
     z-index: 256;
@@ -90,7 +89,6 @@
     width: 100%;
     height: 100vh;
     max-width: none;
-    min-height: none;
     max-height: none;
 }
 
@@ -192,6 +190,7 @@
 
 .chat {
     position: absolute;
+    right: 0;
     width: 20rem;
     height: 100%;
     display: flex;
